--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <title>GreatestBear</title>
   </head>
   <body>
-    <div class="header"><h1 style="text-align:center; line-height: 100px;">GreatestBear</h1></div>
+    <div class="header"><h1 style="text-align:center; line-height: 130px;">GreatestBear</h1></div>
     <div class="main">
-      <div class="aside">aside</div>
+      <div class="aside"><h3 style="text-align: center;">목차</h3></div>
       <div class="right">
-        <div class="nav">nav</div>
-        <div class="section">section
-          <div class="article">article</div>
+        <div class="nav"><h3 style="text-align:left; line-height: 10px; display:inline-block;">&nbsp;공지 : </h2>&nbsp;공사중입니다.</div>
+        <div class="section">
+          <div class="article"></div>
         </div>
       </div>
     </div>
-    <div class="footer">footer</div>
+    <div class="footer"><h3 style="text-align:left; line-height: 10px; display:inline-block;">&nbsp;공지 : </h2>&nbsp;공사중입니다.</div>
   </body>
 </html>
