--- a/page1.html
+++ b/page1.html
@@ -6,10 +6,15 @@
     <title>GreatestBear</title>
   </head>
   <body>
-    <div class="header"><h1 style="text-align:center; line-height: 130px;">GreatestBear</h1></div>
+    <div class="header"><h1 style="text-align:center; line-height: 130px;"><a href="./index.html" style="text-decoration:none; color:black;">GreatestBear</a></h1></div>
     <div class="main">
-      <div class="aside"><h3 style="text-align: center;">목차</h3></div>
-      <div class="right">
+        <div class="aside"><h3 style="text-align: center;">목차</h3>
+            <ul>
+                <li><a href="./index.html" style="text-decoration:none; color:black;">홈</a></li>
+                <li><a href="./page1.html" style="text-decoration:none; color:black;">자기소개</a></li>
+            </ul>
+        </div>
+        <div class="right">
         <div class="nav"><h3 style="text-align:left; line-height: 10px; display:inline-block;">&nbsp;공지 : </h2>&nbsp;공사중입니다.</div>
         <div class="section">
           <div class="article">자기소개가 들어갈 부분</div>
