--- a/page1.html
+++ b/page1.html
@@ -15,11 +15,24 @@
             </ul>
         </div>
         <div class="right">
-        <div class="nav"><h3 style="text-align:left; line-height: 10px; display:inline-block;">&nbsp;공지 : </h2>&nbsp;공사중입니다.</div>
-        <div class="section">
-          <div class="article">자기소개가 들어갈 부분</div>
+            <div class="nav"><h3 style="text-align:left; line-height: 10px; display:inline-block;">&nbsp;공지 : </h2>&nbsp;공사중입니다.</div>
+            <div class="section">
+                <div class="article2"><img src="./pic1.jpg"; height="300px"; width="250px";><img src="./pic2.jpg"; height="300px"; width="250px";></div>
+                <div style="display:inline-block; background-color: #323e35;">
+                    이름: 장태종<br>
+                    학번: 32193928<br>
+                    학과: 소프트웨어학과<br>
+                    취미: 게임, guitar, 농구<br>
+                    진로: 게임 개발<br>
+                </div>
+                <div class="article">
+                    <p>단국대 <b>소프트웨어학과</b>에 재학중인 <b>장태종</b> 이라고 합니다.<br>
+                    취미는 게임(LOL, Battle Ground 등등), 스포츠(대표적으로 농구), 악기(guitar)를 하고 있습니다.<br>
+                    <b>진로는 게임 개발</b> 방향으로 생각하고 있으며 PC게임 개발에 관심이 많습니다.<br>
+                    잘부탁드립니다.</p>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
     <div class="footer"><h3 style="text-align:left; line-height: 10px; display:inline-block;">&nbsp;공지 : </h2>&nbsp;공사중입니다.</div>
   </body>
