--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
         </div>
       </div>
     </div>
-    <div class="footer"><h3 style="text-align:left; line-height: 10px; display:inline-block;">&nbsp;공지 : </h2>&nbsp;공사중입니다.</div>
+    <div class="footer"><h3 style="text-align:center; line-height: 10px; display:inline-block;"><a href="https://github.com/GreatestBear/GreatestBear.github.io" style="text-decoration:none; color:black;">GreatestBear GitHub</a></h3></div>
   </body>
 </html>
