--- a/page1.html
+++ b/page1.html
@@ -30,10 +30,11 @@
                     취미는 게임(LOL, Battle Ground 등등), 스포츠(대표적으로 농구), 악기(guitar)를 하고 있습니다.<br>
                     <b>진로는 게임 개발</b> 방향으로 생각하고 있으며 PC게임 개발에 관심이 많습니다.<br>
                     잘부탁드립니다.</p>
+                    <iframe width="400" height="250" src="https://www.youtube.com/embed/240FRga5Xow" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
             </div>
         </div>
     </div>
-    <div class="footer"><h3 style="text-align:left; line-height: 10px; display:inline-block;">&nbsp;공지 : </h2>&nbsp;공사중입니다.</div>
+    <div class="footer"><h3 style="text-align:left; line-height: 10px; display:inline-block;"><a href="https://github.com/GreatestBear/GreatestBear.github.io" style="text-decoration:none; color:black;">GreatestBear GitHub</a></h3></div>
   </body>
 </html>
