--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
         </ul>
       </div>
       <div class="right">
-        <div class="nav"><h3 style="text-align:left; line-height: 10px; display:inline-block;">&nbsp;공지 : </h2>&nbsp;공사중입니다.</div>
+        <div class="nav"><h3 style="text-align:left; line-height: 10px; display:inline-block;">&nbsp;■■ : </h2>&nbsp;■■</div>
         <div class="section">
-          <div class="article"></div>
+          <div class="article">
+            <img src="./bear.png" height="700px">
+          </div>
         </div>
       </div>
     </div>
