--- a/page4.html
+++ b/page4.html
@@ -21,7 +21,7 @@
         <div class="nav"><h3 style="text-align:left; line-height: 10px; display:inline-block;">&nbsp;■■ : </h2>&nbsp;■■</div>
         <div class="section">
           <div class="article">
-            <img src="./bear.png" height="700px">
+            소켓프로그래밍
           </div>
         </div>
       </div>
