--- a/page1.html
+++ b/page1.html
@@ -12,10 +12,13 @@
             <ul>
                 <li><a href="./index.html" style="text-decoration:none; color:black;">홈</a></li>
                 <li><a href="./page1.html" style="text-decoration:none; color:black;">자기소개</a></li>
+                <li><a href="./page2.html" style="text-decoration:none; color:black;">컴퓨터네트워크1장</a></li>
+                <li><a href="./page3.html" style="text-decoration:none; color:black;">컴퓨터네트워크2장</a></li>
+                <li><a href="./page4.html" style="text-decoration:none; color:black;">컴퓨터네트워크<br>소켓프로그래밍</a></li>
             </ul>
         </div>
         <div class="right">
-            <div class="nav"><h3 style="text-align:left; line-height: 10px; display:inline-block;">&nbsp;■■ : </h2>&nbsp;■■.</div>
+            <div class="nav"><h3 style="text-align:left; line-height: 10px; display:inline-block;">&nbsp;■■ : </h2>&nbsp;■■햣.</div>
             <div class="section">
                 <div class="article2"><img src="./pic1.jpg"; height="300px"; width="250px";><img src="./pic2.jpg"; height="300px"; width="250px";></div>
                 <div style="display:inline-block; background-color: #323e35;">
