--- a/page3.html
+++ b/page3.html
@@ -12,13 +12,16 @@
         <ul>
           <li><a href="./index.html" style="text-decoration:none; color:black;">홈</a></li>
           <li><a href="./page1.html" style="text-decoration:none; color:black;">자기소개</a></li>
+          <li><a href="./page2.html" style="text-decoration:none; color:black;">컴퓨터네트워크1장</a></li>
+          <li><a href="./page3.html" style="text-decoration:none; color:black;">컴퓨터네트워크2장</a></li>
+          <li><a href="./page4.html" style="text-decoration:none; color:black;">컴퓨터네트워크<br>소켓프로그래밍</a></li>
         </ul>
       </div>
       <div class="right">
         <div class="nav"><h3 style="text-align:left; line-height: 10px; display:inline-block;">&nbsp;■■ : </h2>&nbsp;■■</div>
         <div class="section">
           <div class="article">
-            <img src="./bear.png" height="700px">
+            컴퓨터 네트워크2장
           </div>
         </div>
       </div>
