--- a/page1.html
+++ b/page1.html
@@ -18,7 +18,7 @@
             </ul>
         </div>
         <div class="right">
-            <div class="nav"><h3 style="text-align:left; line-height: 10px; display:inline-block;">&nbsp;■■ : </h2>&nbsp;■■햣.</div>
+            <div class="nav"><h3 style="text-align:left; line-height: 10px; display:inline-block;">&nbsp;■■ : </h2>&nbsp;■■.</div>
             <div class="section">
                 <div class="article2"><img src="./pic1.jpg"; height="300px"; width="250px";><img src="./pic2.jpg"; height="300px"; width="250px";></div>
                 <div style="display:inline-block; background-color: #323e35;">
