--- a/page1.html
+++ b/page1.html
@@ -28,12 +28,13 @@
                     취미: 게임, guitar, 농구<br>
                     진로: 게임 개발<br>
                 </div>
+                <div style="display: inline-block;"><iframe width="400" height="250" src="https://www.youtube.com/embed/240FRga5Xow" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
                 <div class="article">
                     <p>단국대 <b>소프트웨어학과</b>에 재학중인 <b>장태종</b> 이라고 합니다.<br>
                     취미는 게임(LOL, Battle Ground 등등), 스포츠(대표적으로 농구), 악기(guitar)를 하고 있습니다.<br>
                     <b>진로는 게임 개발</b> 방향으로 생각하고 있으며 PC게임 개발에 관심이 많습니다.<br>
                     잘부탁드립니다.</p>
-                    <iframe width="400" height="250" src="https://www.youtube.com/embed/240FRga5Xow" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    
                 </div>
             </div>
         </div>
