--- a/page1.html
+++ b/page1.html
@@ -12,8 +12,8 @@
             <ul>
                 <li><a href="./index.html" style="text-decoration:none; color:black;">홈</a></li>
                 <li><a href="./page1.html" style="text-decoration:none; color:black;">자기소개</a></li>
-                <li><a href="./page2.html" style="text-decoration:none; color:black;">컴퓨터네트워크1장</a></li>
-                <li><a href="./page3.html" style="text-decoration:none; color:black;">컴퓨터네트워크2장</a></li>
+                <!--<li><a href="./page2.html" style="text-decoration:none; color:black;">컴퓨터네트워크1장</a></li>
+                <li><a href="./page3.html" style="text-decoration:none; color:black;">컴퓨터네트워크2장</a></li>-->
                 <li><a href="./page4.html" style="text-decoration:none; color:black;">컴퓨터네트워크<br>소켓프로그래밍</a></li>
             </ul>
         </div>
@@ -33,7 +33,7 @@
                     <p>단국대 <b>소프트웨어학과</b>에 재학중인 <b>장태종</b> 이라고 합니다.<br>
                     취미는 게임(LOL, Battle Ground 등등), 스포츠(대표적으로 농구), 악기(guitar)를 하고 있습니다.<br>
                     <b>진로는 게임 개발</b> 방향으로 생각하고 있으며 PC게임 개발에 관심이 많습니다.<br>
-                    잘부탁드립니다.</p>
+                    </p>
                     
                 </div>
             </div>
