--- a/page3.html
+++ b/page3.html
@@ -12,8 +12,8 @@
         <ul>
           <li><a href="./index.html" style="text-decoration:none; color:black;">홈</a></li>
           <li><a href="./page1.html" style="text-decoration:none; color:black;">자기소개</a></li>
-          <li><a href="./page2.html" style="text-decoration:none; color:black;">컴퓨터네트워크1장</a></li>
-          <li><a href="./page3.html" style="text-decoration:none; color:black;">컴퓨터네트워크2장</a></li>
+          <!--<li><a href="./page2.html" style="text-decoration:none; color:black;">컴퓨터네트워크1장</a></li>
+          <li><a href="./page3.html" style="text-decoration:none; color:black;">컴퓨터네트워크2장</a></li>-->
           <li><a href="./page4.html" style="text-decoration:none; color:black;">컴퓨터네트워크<br>소켓프로그래밍</a></li>
         </ul>
       </div>
