--- a/page4-3.html
+++ b/page4-3.html
@@ -20,15 +20,14 @@
       <div class="right">
         <div class="nav"><h3 style="text-align:left; line-height: 10px; display:inline-block;">&nbsp;■■ : </h2>&nbsp;■■</div>
         <div class="section">
-          <div style="display: block;">
-            <button type="button" onclick="location.href=''">prev</button>
-            <button type="button" style="position: absolute; right:10px;" onclick="location.href='./page4-2.html'">next</button>
-          </div>
+            <div style="display: block;">
+                <button type="button" onclick="location.href='./page4-2.html'">prev</button>
+                <button type="button" style="position: absolute; right:10px;" onclick="location.href='./page4-4.html'">next</button>
+            </div>
           <div style="display: inline-block;">
-            <img src="./network/1.jpg" width="720px" height="400px"><img src="./network/2.jpg" width="720px" height="400px"><br>
-            goorm ide에서 진행하였으며, vim을 통해서 c파일을 작성하였습니다.
+            <img src="./network/5.jpg" width="720px"; height="400px";><img src="./network/6.jpg" width="720px"; height="400px";><br>
+            생성한 server.c파일 또한 책의 code로 작성, 이후 디버깅을 위해 기존에 했던 client와 server파일을 삭제
           </div>
-          
         </div>
       </div>
     </div>
