add network homework

--- a/download.html
+++ b/download.html
@@ -26,31 +26,12 @@
         <div class="nav"><h3 style="text-align:left; line-height: 10px; display:inline-block;">&nbsp;■■ : </h2>&nbsp;■■</div>
         <div class="section">
           <div class="article">
-            
-            <article>
-              Chapter1 에서 했던 Protocol의 계층화 모델을 자세히 살펴보면,<br>
-              <img src="./2-1.png" style="weight:300px; height: 300px;"><br>
-              처럼 구조를 이루고 있다. <br>
-              Socket program의 구조를 살펴보자<br>
-              <img src="./2-2.png" style="weight:300px; height: 300px;"><br>
-              과 같은 구조를 가지고 있다.<br>
-            </article>
-              <hr>
-            <article>
-             웹문서를 이루는 구성 요소들로는 HTML, CSS, HTML5, SGML, XML등이 있다.<br>
-             APM는 Apache, php, MySql을 의미한다.<br>
-            </article>
-            <hr>
-            <img src="./2-3.png" style="weight:300px; height: 300px;"><br>
-            <img src="./2-4.png" style="weight:300px; height: 300px;"><br>
-            <img src="./2-5.png" style="weight:300px; height: 300px;"><br>
-            <img src="./2-6.png" style="weight:300px; height: 300px;"><br>
-            <img src="./2-7.png" style="weight:300px; height: 300px;"><br>
-            <img src="./2-8.png" style="weight:300px; height: 300px;"><br>
-            <img src="./2-9.png" style="weight:300px; height: 300px;"><br>
-            <img src="./2-10.png" style="weight:300px; height: 300px;"><br>
-            <img src="./2-11.png" style="weight:300px; height: 300px;"><br>
-
+            <li><a href="./server-asc.c" download="./32193928-server-asc.c">server-asc.c</a></li>
+            <li><a href="./client-asc.c" download="./32193928-client-asc.c">server-asc.c</a></li>
+            <li><a href="./server-cur.py" download="./32193928-server-cur.py">server-asc.c</a></li>
+            <li><a href="./client-cur.py" download="./32193928-client-cur.py">server-asc.c</a></li>
+            <li><a href="./server-file.c" download="./32193928-server-file.c">server-asc.c</a></li>
+            <li><a href="./client-file.c" download="./32193928-client-file.c">server-asc.c</a></li>
           </div>
         </div>
       </div>
