--- a/page1.html
+++ b/page1.html
@@ -12,14 +12,19 @@
             <ul>
                 <li><a href="./index.html" style="text-decoration:none; color:black;">홈</a></li>
                 <li><a href="./page1.html" style="text-decoration:none; color:black;">자기소개</a></li>
-                <!--<li><a href="./page2.html" style="text-decoration:none; color:black;">컴퓨터네트워크1장</a></li>
-                <li><a href="./page3.html" style="text-decoration:none; color:black;">컴퓨터네트워크2장</a></li>-->
+                <li><a href="./page2.html" style="text-decoration:none; color:black;">컴퓨터네트워크1장</a></li>
+                <li><a href="./page3.html" style="text-decoration:none; color:black;">컴퓨터네트워크2장</a></li>
+                <li><a href="./page5.html" style="text-decoration:none; color:black;">컴퓨터네트워크3장</a></li>
+                <li><a href="./page6.html" style="text-decoration:none; color:black;">컴퓨터네트워크4장</a></li>
+                <li><a href="./page7.html" style="text-decoration:none; color:black;">컴퓨터네트워크5장</a></li>
                 <li><a href="./page4.html" style="text-decoration:none; color:black;">컴퓨터네트워크<br>소켓프로그래밍</a></li>
+                <li><a href="./page8.html" style="text-decoration:none; color:black;">컴퓨터네트워크<br>소켓프로그래밍2</a></li>
+                <li><a href="./download.html" style="text-decoration:none; color:black;">download</a></li>
             </ul>
         </div>
         <div class="right">
             <div class="nav"><h3 style="text-align:left; line-height: 10px; display:inline-block;">&nbsp;■■ : </h2>&nbsp;■■.</div>
-            <div class="section">
+            <div class="article">
                 <div class="article2"><img src="./pic1.jpg"; height="300px"; width="250px";><img src="./pic2.jpg"; height="300px"; width="250px";></div>
                 <div style="display:inline-block; background-color: #323e35;">
                     이름: 장태종<br>
