--- a/page4.html
+++ b/page4.html
@@ -12,9 +12,14 @@
         <ul>
           <li><a href="./index.html" style="text-decoration:none; color:black;">홈</a></li>
           <li><a href="./page1.html" style="text-decoration:none; color:black;">자기소개</a></li>
-          <!--<li><a href="./page2.html" style="text-decoration:none; color:black;">컴퓨터네트워크1장</a></li>
-          <li><a href="./page3.html" style="text-decoration:none; color:black;">컴퓨터네트워크2장</a></li>-->
+          <li><a href="./page2.html" style="text-decoration:none; color:black;">컴퓨터네트워크1장</a></li>
+          <li><a href="./page3.html" style="text-decoration:none; color:black;">컴퓨터네트워크2장</a></li>
+          <li><a href="./page5.html" style="text-decoration:none; color:black;">컴퓨터네트워크3장</a></li>
+          <li><a href="./page6.html" style="text-decoration:none; color:black;">컴퓨터네트워크4장</a></li>
+          <li><a href="./page7.html" style="text-decoration:none; color:black;">컴퓨터네트워크5장</a></li>
           <li><a href="./page4.html" style="text-decoration:none; color:black;">컴퓨터네트워크<br>소켓프로그래밍</a></li>
+          <li><a href="./page8.html" style="text-decoration:none; color:black;">컴퓨터네트워크<br>소켓프로그래밍2</a></li>
+          <li><a href="./download.html" style="text-decoration:none; color:black;">download</a></li>
         </ul>
       </div>
       <div class="right">
@@ -26,7 +31,7 @@
           </div>
           <div style="display: inline-block;">
             <img src="./network/1.jpg" width="720px" height="400px"><img src="./network/2.jpg" width="720px" height="400px"><br>
-            goorm ide에서 진행하였으며, vim을 통해서 c파일을 작성하였습니다.
+            goorm ide에서 진행했으며, vim을 통해서 c파일을 작성했다.
           </div>
           
         </div>
