--- a/page4-6.html
+++ b/page4-6.html
@@ -12,9 +12,14 @@
         <ul>
           <li><a href="./index.html" style="text-decoration:none; color:black;">홈</a></li>
           <li><a href="./page1.html" style="text-decoration:none; color:black;">자기소개</a></li>
-          <!--<li><a href="./page2.html" style="text-decoration:none; color:black;">컴퓨터네트워크1장</a></li>
-          <li><a href="./page3.html" style="text-decoration:none; color:black;">컴퓨터네트워크2장</a></li>-->
+          <li><a href="./page2.html" style="text-decoration:none; color:black;">컴퓨터네트워크1장</a></li>
+          <li><a href="./page3.html" style="text-decoration:none; color:black;">컴퓨터네트워크2장</a></li>
+          <li><a href="./page5.html" style="text-decoration:none; color:black;">컴퓨터네트워크3장</a></li>
+          <li><a href="./page6.html" style="text-decoration:none; color:black;">컴퓨터네트워크4장</a></li>
+          <li><a href="./page7.html" style="text-decoration:none; color:black;">컴퓨터네트워크5장</a></li>
           <li><a href="./page4.html" style="text-decoration:none; color:black;">컴퓨터네트워크<br>소켓프로그래밍</a></li>
+          <li><a href="./page8.html" style="text-decoration:none; color:black;">컴퓨터네트워크<br>소켓프로그래밍2</a></li>
+          <li><a href="./download.html" style="text-decoration:none; color:black;">download</a></li>
         </ul>
       </div>
       <div class="right">
